Update 'What we do' section with real content and icon descriptions

--- a/headphones/4-index.html
+++ b/headphones/4-index.html
@@ -40,32 +40,32 @@
             <section class="what-we-do-section container">
                 <div class="what-we-do">
                     <h2>What we do...</h2>
-                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.  rerum dolores maxime accusamus illum unde quod nostrum, consequuntur sed atque perferendis! Fuga, consectetur vel officiis minus nihil dolore placeat quasi? Error accusantium fuga perferendis corrupti ex quibusdam et perspiciatis, praesentium aliquid explicabo a quas inventore id pariatur! Quisquam, omnis voluptates explicabo nam odio maiores labore ipsum esse pariatur, vel provident?</p>
+                     <p>At HEADPHONES, we bring sound to life. From music lovers to content creators, we design audio experiences that inspire. Our mission is to deliver premium sound, cutting-edge audio tech, and stylish comfort — so you can listen, create, and feel every beat.</p>
                 </div>
                 <div class="font-icons container">
 
                     <div class="font-1">
                         <span class="holberton_school-icon-ic_sound icon-font"></span>
-                        <h3>lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>High-Fidelity Sound</h3>
+                        <p>Crystal-clear audio with deep bass and crisp highs for an immersive listening experience.</p>
                     </div>
 
                     <div class="font-1">
                         <span class="holberton_school-icon-ic_video icon-font"></span>
-                        <h3>lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, onsectetur adipisicing elit.</p>
+                        <h3> Content Creation Support</h3>
+                        <p>Perfect audio tools for creators, podcasters, and streamers to produce professional-grade sound.</p>
                     </div>
 
                     <div class="font-1">
                         <span class="holberton_school-icon-ic_music icon-font"></span>
-                        <h3>lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h3>Music Tuning & EQ</h3>
+                        <p>Custom sound profiles and equalizer settings tailored for different music genres.</p>
                     </div>
 
                     <div class="font-1">
                         <span class="holberton_school-icon-ic_hearing icon-font"></span>
-                        <h3>lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet,  consectetur adipisicing elit.</p>
+                        <h3>Noise Isolation Tech</h3>
+                        <p>Advanced noise-cancellation and isolation for undisturbed listening anywhere, anytime.</p>
                     </div>
 
                 </div>
