Update 'Our Results' section with real metrics and content

--- a/headphones/4-index.html
+++ b/headphones/4-index.html
@@ -73,35 +73,35 @@
                 <section class="result-section">
                     <div class="result-content container">
                        <h2>Our results speak for themselves</h2>
-                       <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia quas dolorum architecto asperiores expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, nesciunt? Lorem Excepturi, eveniet accusantium quas vel error  quod commodi expedita.</p>
+                       <p>Our commitment to premium sound and user satisfaction has driven impressive growth and brand loyalty. From consistent performance upgrades to customer satisfaction, the numbers prove the power of our technology and innovation.</p>
                     </div>
                     <div class="pentagon-container container">
                        <div class="pentagon">
                            <img src="images/pentagone.png" alt="our results">
                            <div class="content-position">
-                               <span>+2%</span>
-                               <p>lorem ipsum dolor</p>
+                               <span>+95%</span>
+                               <p>Happy customers</p>
                            </div>
                        </div>
                        <div class="pentagon">
                            <img src="images/pentagone.png" alt="our results">
                            <div class="content-position">
-                               <span>+2%</span>
-                               <p>lorem ipsum dolor</p>
+                               <span>+45%</span>
+                               <p>Better sound</p>
                            </div>
                        </div>
                        <div class="pentagon">
                            <img src="images/pentagone.png" alt="our results">
                            <div class="content-position">
-                               <span>+2%</span>
-                               <p>lorem ipsum dolor</p>
+                               <span>+60%</span>
+                               <p>More returns</p>
                            </div>
                        </div>
                        <div class="pentagon">
                            <img src="images/pentagone.png" alt="our results">
                            <div class="content-position">
-                               <span>+2%</span>
-                               <p>lorem ipsum dolor</p>
+                               <span>+30%</span>
+                               <p>longer battery</p>
                            </div>
                     </div>
                 </section>
